codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 3160
expression: popup
---
  Select Reasoning Level for openai/gpt-oss-120b:nitro

  1. Low               Faster responses with lighter reasoning
  2. Medium (default)  Balanced speed and reasoning depth
› 3. High (current)    More reasoning for complex problems

  Press enter to confirm or esc to go back
