codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 2994
expression: popup
---
  Select Personality
  Choose a communication style for future responses.
  Current model (openai/gpt-oss-120b:nitro) doesn't support personalities. Try

› 1. Friendly   Warm, collaborative, and helpful.
  2. Pragmatic  Concise, task-focused, and direct.

  Press enter to confirm or esc to go back
