codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1160
expression: popup
---
  Approaching rate limits
  Switch to minimax-m2.1 for lower credit usage?

› 1. Switch to minimax-m2.1                 OpenRouter Minimax M2.1 (nitro).
  2. Keep current model
  3. Keep current model (never show again)  Hide future rate limit reminders
                                            about switching models.

  Press enter to confirm or esc to go back
